Worked on function to get and organise live fixtures for a season from a third party API. Still needs to have assignment of rounds and the accounting for breaks in the season looked  at.

--- a/frontend/Yes! Get In!/www/css/ionic.app.css
+++ b/frontend/Yes! Get In!/www/css/ionic.app.css
@@ -7051,5 +7051,4 @@ ion-view[view-title="League Table"] .row:nth-child(2n) {
   background: #fff; }
 
 .eighty {
-  width: 80%;
-}
+  width: 80%; }
